# Langchain-Guide

./: .env.example  README.md  pyproject.toml
00_langchain_intro/: readme.md
01_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  4_chat_model_conversation_with_user.py  readme.md
02_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py  readme.md
03_memory/: readme.md
04_rag_intro/: readme.md
05_document_loaders/: document_loaders.py  readme.md
06_splitter/: readme.md  splitter.py
07_embedding/: embedding.py  readme.md
08_vecor_store/: 01_pineone_vector_store.py  02_qdrant_vecor_store.py  readme.md
09_retrieval/: 01_Retrieval.py  readme.md
10_chains_LCEL/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py  readme.md
